--- a/index.html
+++ b/index.html
@@ -3439,6 +3439,7 @@
         }
     }
 
+    // Update the toggleAIPanel function
     function toggleAIPanel() {
       const panel = document.getElementById('ai-panel');
       panel.classList.toggle('-translate-x-full');
@@ -3480,6 +3481,7 @@
       }
     }
 
+    // Update the toggleMusicPanel function
     function toggleMusicPanel() {
       const panel = document.getElementById('music-panel');
       panel.classList.toggle('-translate-x-full');
